# large-felid-trajectory-reconstruction

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: __init__.py  dataset_specs.py
notebooks/: 0_build_pretrained_model.ipynb  1_formal_validation.ipynb  2_formal_heldout_test.ipynb  3_leave_one_individual_out.ipynb  4_transfer_analysis.ipynb  5_make_publication_figures.ipynb
outputs/pretrained_model/: model_metadata.json  run_config.json
scripts/: hpc_check_pretrained.py  hpc_check_space.sh  hpc_run_loio.sh  hpc_run_validation_test.sh  slurm_loio.sh  slurm_validation_test.sh
src/carnivore_reconstruction/: __init__.py  benchmark.py  candidates.py  config.py  context.py  data.py  direct_generators.py  ecological_candidates.py  environment.py  fewshot.py  formal_large_felid.py  geometry.py  library.py  metrics.py  model.py  plotting.py  proposed.py  ranking.py  tasks.py  timing.py  transfer.py  utils.py
