[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carnivore-reconstruction"
version = "0.1.0"
description = "Motif-based endpoint-conditioned trajectory reconstruction for sparse carnivore GPS tracks"
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "scikit-learn", "joblib"]

[tool.setuptools.packages.find]
where = ["src"]
